--- a/client/src/styles/Project.css
+++ b/client/src/styles/Project.css
@@ -1,4 +1,4 @@
-#project {
+.project {
 
     background-color: orange;
 
@@ -10,36 +10,41 @@
 
     border-radius: 1rem;
 
+    margin: 2rem;
+
 }
 
-#project .overlay {
+.project .overlay {
 
     width: 100%;
     height: 100%;
     position: absolute;
 
     display: flex;
+    flex-direction: column;
     justify-content: center;
     align-items: center;
 
     opacity: 0;
-    background-color: black;
+    background-color: rgba(0, 0, 0, 0.8);
+
+    color: white;
 
     transition: opacity 0.5s;
 
 }
 
-#project .overlay:hover {
+.project .overlay:hover {
 
     opacity: 1;
 
 }
 
-#project img {
+.project img {
 
     width: 100%;
     height: 100%;
-    object-fit: fill;
+    object-fit: cover;
 
     background-color: rgba(0, 0, 0, 0.8);
 
