--- a/client/src/styles/App.css
+++ b/client/src/styles/App.css
@@ -4,7 +4,10 @@ body {
     height: 100vh;
     margin: 0;
 
+    background-image: url("../assets/img/background.jpg");
+
     font-family: "Calibri";
+    color: white;
 
 }
 
@@ -17,5 +20,11 @@ a {
 a:hover {
 
     font-size: 120%;
+
+}
+
+#root {
+
+    position: relative;
 
 }
