--- a/client/src/styles/Header.css
+++ b/client/src/styles/Header.css
@@ -1,12 +1,83 @@
-header {
+/* header {
 
     width: 100vw;
     height: 15vh;
 
-    background-color: slategray;
+    position: relative
+} */
+
+header {
+
+    width: 100vw;
+    height: 5vh;
 
     display: flex;
     justify-content: center;
+
+    background-color: rgb(0, 0, 0);
+
+}
+
+header img {
+
+    width: auto;
+    height: 3vh;
+    width: auto;
+
+}
+
+#sticky-nav {
+
+    width: 100vw;
+    height: 10vh;
+
+    background-color: rgba(0, 0, 0, 1);
+
+    position: sticky;
+    top: 0;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    z-index: 5;
+
+}
+
+header span {
+
+    width: 25%;
+    display: flex;
     align-items: center;
 
+}
+
+#logo {
+
+    justify-content: flex-start;
+    /* background-color: green; */
+
+}
+
+#urls {
+
+    justify-content: flex-end;
+    /* background-color: yellow; */
+
+}
+
+#urls div {
+
+    margin: 0.5rem;
+
+}
+
+#LILogo {
+
+    filter: grayscale(100%);
+    transition: filter 0.4s;
+
+}
+
+#LILogo:hover {
+
+    filter: grayscale(0%)
 }
