--- a/client/src/styles/Project.css
+++ b/client/src/styles/Project.css
@@ -2,8 +2,8 @@
 
     background-color: orange;
 
-    width: 25vw;
-    height: 30vh;
+    max-width: 25vw;
+    height: auto;
     position: relative;
 
     overflow: hidden;
