--- a/client/src/styles/App.css
+++ b/client/src/styles/App.css
@@ -4,7 +4,11 @@ body {
     height: 100vh;
     margin: 0;
 
-    background-image: url("../assets/img/background.jpg");
+    background-image: url("../assets/img/background1.png");
+    background-size: 200%;
+    background-position: 0%;
+    background-repeat: no-repeat;
+    background-color: black;
 
     font-family: "Calibri";
     color: white;
@@ -17,9 +21,12 @@ a {
 
 }
 
-a:hover {
+h1 {
 
-    font-size: 120%;
+    margin: 3rem;
+    font-size: 5rem;
+
+    letter-spacing: 0.5rem;
 
 }
 
