--- a/client/src/styles/ViewPortfolio.css
+++ b/client/src/styles/ViewPortfolio.css
@@ -1,13 +1,30 @@
 #project-container {
 
-    width: 100%;
-    height: 100%;
+    width: 90%;
 
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
     justify-content: center;
 
-    /* background-color: red; */
+    border-radius: 1.5rem;
+    background-color: rgba(0, 0, 0, 0.3);
+
+}
+
+#wrapper {
+
+    width: 100%;
+
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+
+}
+
+h1 {
+
+    margin-left: 10rem;
+    width: 90%;
 
 }
