--- a/client/src/styles/Header.css
+++ b/client/src/styles/Header.css
@@ -14,7 +14,7 @@ header {
     display: flex;
     justify-content: center;
 
-    background-color: rgb(0, 0, 0);
+    background-color: rgba(0, 0, 0, 0.534);
 
 }
 
@@ -31,7 +31,7 @@ header img {
     width: 100vw;
     height: 10vh;
 
-    background-color: rgba(0, 0, 0, 0.2);
+    background-color: rgba(12, 0, 41, 0.747);
 
     position: sticky;
     top: 0;
@@ -39,6 +39,14 @@ header img {
     justify-content: center;
     align-items: center;
     z-index: 5;
+
+    transition: background-color 0.5s;
+
+}
+
+#sticky-nav:hover {
+
+    background-color: rgba(12, 0, 41, 1);
 
 }
 
