added footer on scroll

--- a/client/src/styles/App.css
+++ b/client/src/styles/App.css
@@ -13,6 +13,8 @@ body {
     font-family: "Calibri";
     color: white;
 
+    overflow-x: hidden;
+
 }
 
 a {
@@ -39,5 +41,13 @@ main {
 
     height: auto;
     width: 100%;
+
+}
+
+#index {
+
+    position: relative;
+    width: 100vw;
+    height: 100vh;
 
 }
