added logo to sticky-nav on scroll

--- a/client/src/styles/Header.css
+++ b/client/src/styles/Header.css
@@ -1,11 +1,3 @@
-/* header {
-
-    width: 100vw;
-    height: 15vh;
-
-    position: relative
-} */
-
 header {
 
     width: 100vw;
@@ -13,6 +5,7 @@ header {
 
     display: flex;
     justify-content: center;
+    align-items: center;
 
     background-color: rgba(24, 0, 56, 0);
 
@@ -51,7 +44,8 @@ header img {
 
 }
 
-header span {
+header span,
+nav span {
 
     width: 25%;
     display: flex;
@@ -101,5 +95,19 @@ header span {
 #GHLogo:hover {
 
     opacity: 0.5;
+
+}
+
+#navLogo {
+
+    font-size: 2rem;
+
+    transition: opacity 0.5s, transform 0.5s;
+
+}
+
+#navLogo:hover {
+
+    transform: scale(1.2);
 
 }
