--- a/client/src/styles/Navigation.css
+++ b/client/src/styles/Navigation.css
@@ -1,9 +1,9 @@
 nav {
 
-    min-width: 50%;
+    width: 100%;
 
     display: flex;
-    justify-content: flex-end;
+    justify-content: center;
 
 }
 
