--- a/client/src/styles/App.css
+++ b/client/src/styles/App.css
@@ -1,11 +1,10 @@
 body {
 
-    width: 100vw;
-    height: 100vh;
+    /* width: 100vw;
+    height: 100vh; */
     margin: 0;
 
     background-image: url("../assets/img/background2.png");
-    /* background-size: 200%; */
     background-position: 0%;
     background-repeat: no-repeat;
     background-color: black;
@@ -37,17 +36,10 @@ h1 {
 
 }
 
-main {
-
-    height: auto;
-    width: 100%;
-
-}
-
 #index {
 
     position: relative;
-    width: 100vw;
-    height: 100vh;
+    /* width: 100vw;
+    height: 100vh; */
 
 }
